# archivar

./: .gitignore  .travis.yml  Cargo.toml  Changelog.md  README.md  concept.md
_tests/: init.rs
_tests/setups/templates/: init.yaml  paths.yaml
_tests/utils/: mod.rs
src/: _main.rs  action.rs  app.rs  args.rs  command.rs  constants.rs  error.rs  lib.rs  logger.rs  main.rs  template.rs
src/action/: check.rs  constructors.rs  message.rs  mod.rs  os.rs  template.rs
src/commands/: archive.rs  command.rs  init.rs  mod.rs  new.rs  unarchive.rs  utils.rs
test/: .template.yaml
tests/: archive.rs  init.rs  new.rs
tests/setups/templates/: includes.yaml  parse.yaml
tests/utils/: mod.rs
