[package]
name = "archivar"
version = "0.1.0"
authors = ["Yannik Sander <me@ysndr.de>"]

[dependencies]
clap = "2.26.0"
slog = { version = "2.2.3",  features = ["max_level_trace"] }
slog-term = "2.3.0"
slog-async = "2.3.0"
sloggers = "0.2.6"
error-chain = "0.11.0"
shell = { git = "https://github.com/ysndr/shell-rs", branch = "master" }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
